# keccakrs

./: .gitignore  Cargo.toml  README.md  constants.rs  keccak_f.rs  libkeccakrs.rlib  main.rs  sponge.rs
src/: keccak.rs  keccak_f.rs  lib.rs  padder.rs  round.rs  sponge.rs
tests/: keccak1600.rs  perf.rs
